--- a/newtab.html
+++ b/newtab.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="logic.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body onload='update();'>
+  <body>
     <div class='space'></div>
     <div id='content'>
       <div id='time'>
